fixed closet spacing

--- a/src/CSS/Closet.css
+++ b/src/CSS/Closet.css
@@ -21,3 +21,11 @@
 .closet-image-bottom{
     width: 70%;
 }
+
+.tops{
+    padding-right: 4rem;
+}
+
+.bottoms{
+    padding-left: 4rem;
+}
